@@ -4,6 +4,9 @@ News
 SVN trunk
 ---------
 
+* Changed preferred name of ``StringBoolean`` to ``StringBool`` (to go
+  with ``bool`` and ``validators.Bool``).  Old alias still available.
+
 * Added ``today_or_after`` option to ``validators.DateValidator``.
 
 * Added a ``validators.FileUploadKeeper`` validator for helping with
